# jsfit-helpdesk-rag_ai_agent

./: README.md  agent_api.py  agent_core.py  config.json  config.py  logger.py  mcp_server.json  pyproject.toml
docs/: DYNAMIC_TOOL_INFO_COMPLETE.md  HTTP_MCP_CLIENT_README.md  README.md
mcp_client/: mcp_tools_factory.py
mcp_client_langchain_adapters/: mcp_tools_factory.py
src/: agent_api.py  agent_core.py  config.py  logger.py
src/mcp_client/: __init__.py  mcp_tools_factory.py
src/sample/: agent.py  api.py  configs.py  models.py  send.py
tests/: demo_dual_mcp.py  test_agent_direct.py  test_api_timeout.py  test_dual_agent.py  test_dual_mcp_basic.py  test_dynamic_tools.py  test_http_client.py  test_http_client_sync.py  test_integration.py  test_logger.py  test_mcp.py  tmp_check_tools_meta.py  tmp_run_tools_queries.py  tmp_test_all_tools.py  tmp_test_create_http_tool.py  tmp_test_dual_agent.py  tmp_test_http_client.py  tmp_test_tools.py
